--- a/catfe/src/main/webapp/pub/css/account.css
+++ b/catfe/src/main/webapp/pub/css/account.css
@@ -44,6 +44,4 @@
   background: rgb(221, 88, 70);
   color: rgb(255, 255, 255);
   box-shadow: 0px 0px 5px 5px rgba(244, 199, 114, 0.2);
-}
-
-/*# sourceMappingURL=account.css.map */
+}/*# sourceMappingURL=account.css.map */
