--- a/catfe/src/main/webapp/pub/css/cats.css
+++ b/catfe/src/main/webapp/pub/css/cats.css
@@ -14,11 +14,15 @@ body {
 }
 
 .swiper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: visible;
   width: 100%;
   height: 500px;
 }
-
-.swiper-slide {
+.swiper .swiper-slide {
+  overflow: visible;
   text-align: center;
   font-size: 18px;
   display: flex;
@@ -28,7 +32,7 @@ body {
   width: 300px;
   transform-style: flat !important;
 }
-.swiper-slide .text-container {
+.swiper .swiper-slide .text-container {
   border-radius: 0.7rem;
   font-family: "Blogger Sans", "Comfortaa", "Verdana", sans-serif;
   font-size: 2rem;
@@ -52,7 +56,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: auto;
   height: 70%;
   object-fit: contain;
   margin-bottom: 1rem;
@@ -83,19 +86,6 @@ body {
   justify-content: center;
   align-items: center;
   padding: 1rem;
-}
-.cats-container .cat-container .image-container {
-  overflow: hidden;
-  width: 80%;
-  height: auto;
-  aspect-ratio: 1/1;
-  border-radius: 100%;
-  border: 10px solid rgb(237, 242, 247);
-}
-.cats-container .cat-container .image-container .cat-image {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
 }
 .cats-container .cat-container .text-container {
   padding: 1rem;
