--- a/catfe/src/main/webapp/pub/css/cats.scss
+++ b/catfe/src/main/webapp/pub/css/cats.scss
@@ -18,49 +18,57 @@ $text-bg: rgb(237, 242, 247);
     }
 
     .swiper {
-        //width: 100%;
-        //height: 500px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: visible;
+        width: 100%;
+        height: 500px;
+        .swiper-slide {
+            overflow: visible;
+            text-align: center;
+            font-size: 18px;
+            
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 300px;
+            transform-style: flat !important;
+            .text-container {
+                border-radius: .7rem;
+                font-family: 'Blogger Sans', 'Comfortaa', 'Verdana', sans-serif;
+                font-size: 2rem;
+                font-weight: bold;
+                letter-spacing: 2px;
+                text-align: center;
+                background-color: $text-bg;
+    
+                height: 80px;
+                width: 200px;
+            }
+        }
+    
     }
     .swiper-btns {
         //top:  -20px !important;
     }
-    .swiper-slide {
-        //text-align: center;
-        //font-size: 18px;
-        //
-        //display: flex;
-        //flex-direction: column;
-        //justify-content: center;
-        //align-items: center;
-        //width: 300px;
-        //transform-style: flat !important;
-        .text-container {
-            border-radius: .7rem;
-            font-family: 'Blogger Sans', 'Comfortaa', 'Verdana', sans-serif;
-            font-size: 2rem;
-            font-weight: bold;
-            letter-spacing: 2px;
-            text-align: center;
-            background-color: $text-bg;
-
-            height: 80px;
-            width: 200px;
-        }
-    }
-
+    
     .swiper-slide-img {
-        //display: block;
-        //width: auto;
-        //height: 100%;
-        //object-fit: contain;
-        //border-radius: 90%;
+        
+        display: block;
+        width: auto;
+        height: 100%;
+        object-fit: contain;
+        border-radius: 90%;
     }
 
     .image-container {
+        
         display: flex;
         justify-content: center;
         align-items: center;
-        width: auto;
+        // width: 100%;
         height: 70%;
         object-fit: contain;
         margin-bottom: 1rem;
@@ -124,20 +132,21 @@ $text-bg: rgb(237, 242, 247);
         
     }
 }
-.image-container{
-    overflow: hidden;
-    width: 80%;
-    height: auto;
-    aspect-ratio: 1 / 1;
-    border-radius: 100%;
-    border: 10px solid $text-bg;
-    margin: 0 !important;
-    .cat-image {
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
+// .image-container{
+//     overflow: hidden;
+//     width: 80%;
+//     height: auto;
+//     aspect-ratio: 1 / 1;
+//     border-radius: 100%;
+//     border: 10px solid $text-bg;
+//     margin: 0 !important;
+//     .cat-image {
+//         object-fit: cover;
+//         width: 100%;
+//         height: 100%;
 
-    }
+//     }
+// }
 // Individual Cat Page
 
 .cat-card {
